Test Org - Speridian/src/objects/BA_Assignment_Skillset__c.object
<CustomObject>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Group_Size__c</fullName>
        <label>Group Size</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Line_of_Business__c</fullName>
        <label>Line of Business</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Region__c</fullName>
        <label>Service Region</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>BA_Assignment_Skillsets</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>BA_Assignment_Skillset</label>
    <nameField>
        <label>BA_Assignment_Skillset Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BA_Assignment_Skillsets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>